-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u222
-
Component/s: hotspot
-
b01
UseOldInlining and AutoShutdownNMT have the wrong obsolete version jdk9.
And UseOldInlining should be removed in c2_globals.hpp
cmd:
java -XX:-AutoShutdownNMT -version
output:
OpenJDK 64-Bit Server VM warning: ignoring option AutoShutdownNMT; support was removed in 9.0
openjdk version "1.8.0_212"
OpenJDK Runtime Environment (build 1.8.0_212-b00)
OpenJDK 64-Bit Server VM (build 25.212-b00, mixed mode)
And UseOldInlining should be removed in c2_globals.hpp
cmd:
java -XX:-AutoShutdownNMT -version
output:
OpenJDK 64-Bit Server VM warning: ignoring option AutoShutdownNMT; support was removed in 9.0
openjdk version "1.8.0_212"
OpenJDK Runtime Environment (build 1.8.0_212-b00)
OpenJDK 64-Bit Server VM (build 25.212-b00, mixed mode)
- relates to
-
JDK-8046598 Scalable Native Memory Tracking development
-
- Resolved
-
-
JDK-8035585 Restore UseOldInlining in jdk8u
-
- Resolved
-
-
JDK-8032490 Remove -XX:+-UseOldInlining
-
- Resolved
-