8232355: Two obsolete flags have the wrong obsolete version in 8u

Correct the obsolete version of UseOldInlining and AutoShutdownNMT, and delete UseOldInlining in c2_globals.hpp

Reviewed-by: phh